# Statistical-Arb-MM

./: .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md  pyproject.toml  requirements  setup.py  temp_lobster_test.csv
.github/workflows/: ci.yml
docs/: design_decisions.md  failure_modes.md  model_spec.md  sensitivity.md
notebooks/: cointegration_demo.ipynb  system_deep_dive.ipynb
python/stat_arb_mm/: __init__.py  bindings.cpp
src/: main.cpp
src/analytics/: CointegrationTests.hpp  OFIValidation.hpp  PnLAnalytics.hpp
src/backtest/: Simulator.hpp  WalkForward.hpp
src/core/: Bitset.hpp  Exchange.cpp  Exchange.hpp  ExecutionReport.hpp  MatchingStrategy.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  PriceLevel.hpp  RingBuffer.hpp  TickNormalizer.hpp  Timestamp.hpp  matching_engine.cpp  matching_engine.hpp
src/execution/: ExecutionSimulator.hpp  TransactionCosts.hpp
src/replay/: LobsterParser.hpp  ReplayEngine.hpp
src/risk/: RiskManager.hpp
src/signals/: KalmanFilter.hpp  KyleLambda.hpp  OFI.hpp  SpreadModel.hpp  VPIN.hpp
src/strategy/: StatArbMM.hpp
tests/cpp/: cointegration_gtest.cpp  integration_tests.cpp  kalman_tests.cpp  latency_tests.cpp  orderbook_benchmark.cpp  orderbook_tests.cpp  replay_tests.cpp  risk_tests.cpp  strategy_benchmark.cpp  strategy_tests.cpp
tests/python/: test_basic.py
