[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "stat_arb_mm"
version = "1.0.0"
description = "Statistical Arbitrage Market Making Simulator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diego"}
]
keywords = ["hft", "trading", "market-making", "stat-arb", "orderbook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "jupyterlab",
]
